# pocket-web-backend

./: .env.example  .gitignore  .gitmodules  CONTAINER_SUPPORT.md  Cargo.toml  Dockerfile  RATE_LIMITING.md  README.md  README_IT.md  SECURE_SESSION_ID.md  build.rs  check-deps.sh  compose.sh  container.sh  docker-compose.yml  run-docker.sh  run.sh  test-docker-config.sh
.cargo/: config.toml
.github/workflows/: rust.yml
bridge/: CMakeLists.txt
bridge/inc/pocket/: constants.h  field.h  field_controller.h  field_controller.hpp  group.h  group_controller.h  group_field.h  pocket.h  user.h
bridge/inc/pocket-bridge/: constants.h  field.h  field_controller.h  group.h  group_controller.h  group_field.h  group_field_controller.h  pocket.h  user.h
bridge/src/: field.cpp  field_controller.cpp  group.cpp  group_controller.cpp  group_field.cpp  group_field_controller.cpp  pocket.cpp  user.cpp
src/: bindings.rs  constants.rs  controllers.rs  main.rs  models.rs  rate_limiter.rs  rest.rs  rests.rs  services.rs  socket.rs  utils.rs
src/controllers/: field_controller.rs  group_controller.rs  rest_controller.rs  rests_controller.rs
src/models/: data_transport.rs  field.rs  field_controller.rs  group.rs  group_field.rs  rest.rs  rests.rs  user.rs
src/rest/: rest_controller.rs  rest_controller_change_passwd.rs  rest_controller_close_session.rs  rest_controller_data.rs  rest_controller_export_data.rs  rest_controller_field_detail.rs  rest_controller_group.rs  rest_controller_group_detail.rs  rest_controller_heartbeat.rs  rest_controller_hello.rs  rest_controller_home.rs  rest_controller_import_data.rs  rest_controller_login.rs  rest_controller_logout.rs  rest_controller_macro.rs  rest_controller_main.rs  rest_controller_registration.rs  rust_controller_macro.rs
src/rests/: handlers.rs  put_handler.rs  server.rs
src/services/: cli.rs  data.rs  http_response_helper.rs  http_server.rs  rate_limiter.rs  rest.rs  secure_session.rs  session.rs  session_timer.rs
src/socket/: ws_conn.rs  ws_server.rs
