[package]
name = "pocket-web-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"]  }
#jsonwebtoken = "9"
ulid = { version = "1.2.1", features = ["serde"] }
actix-web = "4"
actix-cors = "0.7.1"
actix-files = "0.6.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
env_logger = "0.11.8"

[build-dependencies]
cmake = "0.1.54"
bindgen = "0.72.0"
