[package]
name = "pocket-web-backend"
version = "5.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"]  }
actix-web = "4"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
env_logger = "0.11.8"
futures-util = "0.3"
rand = { version = "0.9.2", features = ["std_rng"] }
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3.4"
tokio = { version = "1", features = ["time", "rt"] }

[build-dependencies]
cmake = "0.1.54"
bindgen = "0.72.0"
